@@ -1,3 +1,7 @@
+2011-02-19  Stanislas Rolland  <typo3@sjbr.ca>
+
+	* Fixed bug #17676: htmlArea RTE: Some combo stores are loaded twice
+
 2011-02-17  Stanislas Rolland  <typo3@sjbr.ca>
 
 	* Fixed bug #17616: htmlArea RTE: Link dialogue doesn't open when anchor class is set with double quotes
